tests/baselines/reference/checkDestructuringShorthandAssigment.errors.txt
tests/cases/compiler/bug25434.js(2,17): error TS2459: Type '{}' has no property 'b' and no string index signature.
tests/cases/compiler/bug25434.js(4,9): error TS2304: Cannot find name 'b'.


==== tests/cases/compiler/bug25434.js (2 errors) ====
    // should not crash while checking
    function Test({ b = '' } = {}) {}
                    ~
!!! error TS2459: Type '{}' has no property 'b' and no string index signature.
    
    Test(({ b = '5' } = {}));
            ~
!!! error TS2304: Cannot find name 'b'.
    